# rust-flutter-flame-mcp

./: .gitignore  Cargo.toml  README.md
flutter-flame-mcp/: Cargo.toml
flutter-flame-mcp/src/: main.rs
flutter-flame-mcp/src/app/: server.rs
flutter-flame-mcp/src/data_source/: docs_cache_data_source.rs  mod.rs
flutter-flame-mcp/src/domain/: mod.rs
flutter-flame-mcp/src/domain/resource/: mod.rs
flutter-flame-mcp/src/domain/resource/repository/: resource_repository.rs
flutter-flame-mcp/src/domain/resource/use_case/: handle_resource.rs  list_resources.rs  mod.rs
flutter-flame-mcp/src/domain/resources/: handle_resources.rs  list_resources.rs  mod.rs  resource.rs
flutter-flame-mcp/src/domain/tool/: mod.rs  tool_query.rs  tool_topic.rs
flutter-flame-mcp/src/domain/tools/: list_tools.rs  mod.rs  search_documentation.rs  search_tutorial.rs  tool_argument.rs  tools_query.rs  tools_topic.rs
flutter-flame-mcp/src/modules/: documentation_files.rs  features.rs  mod.rs  server.rs  uri_files.rs
flutter-flame-mcp/src/presentation/: mod.rs  routes.rs
flutter-flame-mcp/src/presentation/output/: handle_tool.rs  initialize.rs  list_resources.rs  mod.rs
flutter-flame-mcp/src/structs/: args.rs  mod.rs  snippet.rs
flutter-flame-mcp/src/structs/routes/: handle_resource.rs  handle_tool.rs  initialize.rs  list_resources.rs  mod.rs
git-download/: Cargo.toml
git-download/src/: lib.rs
git-download/src/modules/: api.rs  docs_cache.rs  downloader.rs  http.rs  logger.rs  mod.rs
git-download/src/structs/: copy_request.rs  mod.rs  repo.rs
(+10 files in other folders)
